@@ -24,15 +24,11 @@
 
 // Exports library functions under Windows when building a DLL. See also:
 // https://msdn.microsoft.com/en-us/library/a90k134d.aspx
-#ifdef _WIN32
-  #if defined(CLBLAST_DLL)
-    #if defined(COMPILING_DLL)
-      #define PUBLIC_API __declspec(dllexport)
-    #else
-      #define PUBLIC_API __declspec(dllimport)
-    #endif
-  #elif defined(CLBLAST_STATIC)
-    #define PUBLIC_API
+#if defined(_WIN32) && defined(CLBLAST_DLL)
+  #if defined(COMPILING_DLL)
+    #define PUBLIC_API __declspec(dllexport)
+  #else
+    #define PUBLIC_API __declspec(dllimport)
   #endif
 #else
   #define PUBLIC_API
