@@ -6,6 +6,7 @@ Development version (next release)
 - Added support for compilation under Visual Studio 2013 (MSVC++ 12.0)
 - Added an option to set OpenCL compiler options through the env variable CLBLAST_BUILD_OPTIONS
 - Added an option to run tuned kernels multiple times to average execution times
+- Added an option to build a static version of the library
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see README)
 
